--- a/frontend/src/shared/dropdownButtonGroup/style.scss
+++ b/frontend/src/shared/dropdownButtonGroup/style.scss
@@ -28,7 +28,7 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      width: 130px;
+      // width: 130px;
     }
   }
 
